--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+    h1 {
+      text-align:center;
+      color: #d8dcd6;
+      font-size: 3em;
+    }
+    div {
+      margin: auto auto;
+      text-align: center;
+    }
+    iframe {
+      height: 4in;
+      width: 6.2in;
+      margin: auto auto;
+      text-align: center;
+    }
+    body {
+      background-color: #85a3b2;
+    }
+  </style>
+</head>
   <h1>
-    Fall 2017 HRC Quidditch
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hogwarts Running Club Racery Data
   </h1>
   <body>
-    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true" src="https://dl.dropboxusercontent.com/s/t6xxox5nyc3aabn/plot.png?dl=0" frameborder="0" style="width:800px; height:6148px; border:none;" scrolling="no"></iframe>
-
-        <p>Your browser does not support iframes.</p>
-      </iframe>
+    <div id="all">
+    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://dl.dropboxusercontent.com/s/t6xxox5nyc3aabn/plot.png?dl=0" frameborder="0"  scrolling="no"></iframe>
+    </div>
 
     </body>
   </html>
