--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
   <h1>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hogwarts Running Club Racery Data
   </h1>
+  <h2>
+          Escape from Azkaban!
+  </h2>
   <body>
     <div id="all">
-    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://dl.dropboxusercontent.com/s/t6xxox5nyc3aabn/plot.png?dl=0" frameborder="0"  scrolling="no"></iframe>
+    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/30u0dh1pvbhg2sz/plot.png?dl=0" frameborder="0"  scrolling="no"></iframe>
     </div>
 
     </body>
