--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </h1>
   <body>
     <div id="all">
-    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?dl=0" frameborder="0"  scrolling="no"></iframe>
+    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" frameborder="0"  scrolling="no"></iframe>
     </div>
 
     </body>
