Re-set the image

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hogwarts Running Club Racery Data
   </h1>
   <body>
-    <div id="all">
+    <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1">
+ <!-- <div id="all">
+
     <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" frameborder="0"  scrolling="no"></iframe>
-    </div>
+    </div>-->
 
     </body>
   </html>
