Re-set the image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hogwarts Running Club Racery Data
   </h1>
   <body>
-    <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" align="center">
+    <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" align="middle">
  <!-- <div id="all">
 
     <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" frameborder="0"  scrolling="no"></iframe>
