--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hogwarts Running Club Racery Data
   </h1>
   <body>
-    <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" align="middle">
+    <div style="margin: auto;padding: 10px;">
+      <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" >
+    </div>
  <!-- <div id="all">
 
     <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" frameborder="0"  scrolling="no"></iframe>
