Re-set the image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-size: 3em;
     }
     div {
-      margin: auto auto;
+      margin: auto;
       text-align: center;
     }
     iframe {
@@ -36,10 +36,5 @@
     <div style="margin: auto;padding: 10px;">
       <img src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" >
     </div>
- <!-- <div id="all">
-
-    <iframe id="DistanceOverTime" onload="window.parent.scrollTo(0,0)" allowtransparency="true"  src="https://www.dropbox.com/s/1tzzdpg2zebxjyj/plot.png?raw=1" frameborder="0"  scrolling="no"></iframe>
-    </div>-->
-
     </body>
   </html>
